@startuml
skinparam classAttributeIconSize 0

class Game {
  +DEALER_MIN_VALUE:int
  +start():void
  +showDrawCard():void
  +addCard():void
  +dealerDrawJudgement():bool
  +judgeWinner():string
}

class playerDrawJudgement {
  {static}+playerDrawJudgement():void
}

interface Person {
  +getName()
  +getHand()
  +addCard()
}

class Player implements Person {
  +name:string
  +__construct():void
  +getName():string
  +getHand():array
  +addCard():Card
}

class Dealer implements Person {
  +name:string
  +__construct():void
  +getName():string
  +getHand():array
  +addCard():Card
}

class Card {
  +CARD_RANK:array
  +CARD_NAME:array
  ' -suit:string
  ' -num:string
  +__construct():void
  +getCardRank():int
  ' +getSuit():string
  ' +getNum():mixed
  ' +getCardName():string
}

class Deck {
  +deck:array
  +__construct():void
  +distributeCards():array
  +addCard():Card
}

class CalculateScore {
  {static}+calculateScore():int
}

class ShowScore {
  {static}+showScore():int
}

Player -- CalculateScore
Dealer -- CalculateScore
Player -- ShowScore
Dealer -- ShowScore
Deck -- Card

@enduml
